# root

./: .env.sample  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ghcr-deploy.yml  host-documentation.yml  lint.yml
docs/: attendance.md  auth.md  docs.md  member.md
migrations/: 20250502200733_status_update_history.sql  20250602174736_add_track_feild_to_members.sql  20250929191135_drop_unnecessary_tables.sql  20251006152634_rename_status_is_updated.sql  20251011162144_add_github_user.sql  20251013082516_implement_status_breaks.sql  20251114165724_create_auth_system.sql
src/: main.rs  routes.rs
src/auth/: api_key.rs  auth_service.rs  guards.rs  middleware.rs  mod.rs  oauth.rs  session.rs
src/daily_task/: mod.rs
src/database_seeder/: seed.sql
src/graphql/: mod.rs
src/graphql/mutations/: attendance_mutations.rs  auth_mutations.rs  member_mutations.rs  mod.rs  status_mutations.rs  streak_mutations.rs
src/graphql/queries/: attendance_queries.rs  member_queries.rs  mod.rs  streak_queries.rs
src/models/: attendance.rs  auth.rs  member.rs  mod.rs  status_update.rs
