[package]
name = "root"
version = "2.0.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.15", features = ["chrono"] }
async-graphql-axum = "7.0.17"
axum = "0.8.6"
axum-extra = { version = "0.12.2", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["clock"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["default", "macros", "rt-multi-thread"] }                       # For async tests
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
tower-http = { version = "0.6.6", features = ["cors"] }
tower = "0.5.1"
chrono-tz = "0.10.4"
serde_json = "1.0"
reqwest = { version = "0.12.23", features = ["json"] }
config = "0.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time", "fmt", "std"] }
dotenv = "0.15.0"
time = { version = "0.3.44", features = ["formatting"] }
oauth2 = "4.4.2"
bcrypt = "0.15.1"
rand = "0.8.5"
async-trait = "0.1.83"
